   * Lowered General's experience to 150 when extra_define DISABLE_GRAND_MARSHAL
     is used
 * User interface:
   * Restored leader unit image in Load Game dialog (bug #18683)
   * Added a "Back to Start" option to the game menu to load the current
     scenario's start save if it is available (feature/bug #18027)
   * Added tooltips to Load Game dialog (feature/bug #18249)
 * Whiteboard
   * Fixed bug #19369 : Using planning mode can cause losing ability to move my units
   * Fixed bug #19408 : Crash shortly after executing invalid multi-turn move
 * Miscellaneous and bug fixes:
   * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
     platforms using XDG layout (no compiled-in preferences path override,
     bug #19318)
   * Fixed unit sound animation timings wherever the {SOUND:SLOW} and
     {SOUND:POISON} macros, and several macros from animation-utils2.cfg are used
     (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Display the savegame version when warning the user about unsupported or
     mismatched versions (bug #7243)
   * Implemented feature request for difficulty changing during campaigns.
     (see bug #10978)
   * The saved games cache file is now save_index instead of save_index.gz, and
     it is compressed when the Compressed Saves option is enabled in Advanced
     Preferences (patch #3115)
   * Show base terrain description if none for overlay (bug #19411)

Version 1.10.0:
 * Campaigns:
   * Legend of Wesmere:
     * Scenario 03: Fixed bug #19067: Control over Galtrid's side stays with the
       player after the arrival of Kalenz
     * Scenario 22: Fixed bug #19236: Cleodil was missing and no recall list
   * An Orcish Incursion:
     * Scenario 3: select a new unit with the Adviser (sic) role for dialogs if
       the original unit selected at the start of the scenario died
   * Under the Burning Suns: