@@ -62,6 +62,8 @@ Version 1.11.0-svn:
    * Added a "Back to Start" option to the game menu to load the current
      scenario's start save if it is available (feature/bug #18027)
    * Added tooltips to Load Game dialog (feature/bug #18249)
+   * Added a Reset All button to Hotkey Settings dialog in preferences
+     (feature/bug #3797)
  * Whiteboard
    * Fixed bug #19369 : Using planning mode can cause losing ability to move my units
    * Fixed bug #19408 : Crash shortly after executing invalid multi-turn move
